chaning portfolio to coding portfolio

--- a/templates/static-sites-cdn-template.yml
+++ b/templates/static-sites-cdn-template.yml
@@ -42,7 +42,7 @@ Mappings:
         - spaceblobman-dev.justinlmartin.com
         - sunrise-sunset-dev.justinlmartin.com
         - blackjack-dev.justinlmartin.com
-        - portfolio-dev.justinlmartin.com
+        - coding-portfolio-dev.justinlmartin.com
         - sunflower-synth-dev.justinlmartin.com
         - sampampulancer-dev.justinlmartin.com
         - qr-dev.justinlmartin.com
@@ -54,7 +54,7 @@ Mappings:
         - spaceblobman.justinlmartin.com
         - sunrise-sunset.justinlmartin.com
         - blackjack.justinlmartin.com
-        - portfolio.justinlmartin.com
+        - coding-portfolio.justinlmartin.com
         - sunflower-synth.justinlmartin.com
         - sampampulancer.justinlmartin.com
         - qr.justinlmartin.com
