adding record fro unicorn warp

--- a/templates/static-sites-cdn-template.yml
+++ b/templates/static-sites-cdn-template.yml
@@ -47,6 +47,7 @@ Mappings:
         - sampampulancer-dev.justinlmartin.com
         - qr-dev.justinlmartin.com
         - landing-page-dev.justinlmartin.com
+        - unicorn-warp-dev
     prod:
       Aliases:
         - peaks-valleys.justinlmartin.com
@@ -59,6 +60,7 @@ Mappings:
         - sampampulancer.justinlmartin.com
         - qr.justinlmartin.com
         - landing-page.justinlmartin.com
+        - unicorn-warp
 #      Make sure these are always last
         - www.justinlmartin.com
         - justinlmartin.com
@@ -446,6 +448,20 @@ Resources:
           AliasTarget:
             DNSName: !GetAtt StaticSitesCdn.DomainName
             HostedZoneId: !Ref HostedZoneId
+        - Name: !Select
+          - 10
+          - !FindInMap [ AliasMap, !Ref Stage, Aliases ]
+          Type: A
+          AliasTarget:
+            DNSName: !GetAtt StaticSitesCdn.DomainName
+            HostedZoneId: !Ref HostedZoneId
+        - Name: !Select
+          - 10
+          - !FindInMap [ AliasMap, !Ref Stage, Aliases ]
+        Type: AAAA
+        AliasTarget:
+          DNSName: !GetAtt StaticSitesCdn.DomainName
+          HostedZoneId: !Ref HostedZoneId
 
 Outputs:
   LatestTimeStamp:
