added code to secure dev sites with basic auth and cleaned up some logging

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ jspm_packages
 /secrets.yml
 /scripts/*
 /lambdas/version-publisher-lambda/dependencies/
+/lambdas/custom-headers-lambda/dependencies/
 /test/sample-curl.txt
